# sdk

./: .gitignore  .gitmodules  README.md  SDK-GUIDELINES.md  composer.json  publish-perl.ps1  publish-perl.sh
.devcontainer/: devcontainer.json  post-create.sh
.github/workflows/: c.yml  dotnet.yml  go.yml  java-sdk.yml  jstruct-cli.yml  perl.yml  php.yml  publish-vscode.yml  python.yml  ruby.yml  rust.yml  swift.yml  typescript.yml  vcpkg.yml
assets/: error-messages.json  tag-release.ps1  tag-release.sh
c/: CMakeLists.txt  README.md  WIP.md
c/examples/: CMakeLists.txt  validate_schema.c  validate_schema.cpp
c/include/json_structure/: error_codes.h  export.h  instance_validator.h  json.h  json_structure.h  json_structure.hpp  schema_validator.h  types.h
c/src/: error_codes.c  instance_validator.c  json.c  json_source_locator.c  regex_utils.cpp  regex_utils.h  schema_validator.c  types.c
c/tests/: CMakeLists.txt  main.c  test_assets.c  test_conformance.c  test_instance_validator.c  test_schema_validator.c  test_thread_safety.c  test_types.c
c/vcpkg/: PUBLISHING.md  portfile.cmake  update-port.ps1  update-port.sh  usage  vcpkg.json
dotnet/: .gitignore  JsonStructure.sln  README.md
dotnet/demo/: Program.cs  demo.csproj
dotnet/src/JsonStructure/: JsonStructure.csproj
dotnet/tests/JsonStructure.Tests/: JsonStructure.Tests.csproj
go/: README.md  doc.go  error_codes.go  go.mod  instance_validator.go  instance_validator.go.backup  instance_validator_extended_test.go  json_source_locator.go  json_source_locator_test.go  meta_schemas_test.go  schema_validator.go  schema_validator.go.backup  serialization.go  serialization_test.go  test_assets_extended_test.go  types.go  validators_concurrent_test.go  validators_edge_cases_test.go  validators_test.go
go/demo/: error_codes_demo.go
java/: .gitignore  MAVEN_CENTRAL_SETUP.md  README.md  VALIDATION_CONTEXT_REFACTORING.md  mvnw  mvnw.cmd  pom.xml
perl/: .gitignore  Makefile.PL  README.md  cpanfile
perl/lib/JSON/: Structure.pm
perl/t/: 01_basic.t  02_schema_validator.t  03_instance_validator.t  04_test_assets.t  05_format_validation.t  06_comprehensive.t  07_cli.t
php/: PUBLISHING.md  README.md  composer.json  coverage.xml  phpunit.xml
php/src/JsonStructure/: ErrorCodes.php  InstanceValidator.php  JsonLocation.php  JsonSourceLocator.php  SchemaValidator.php  Types.php  ValidationError.php  ValidationResult.php  ValidationSeverity.php
php/tests/: AdditionalValidationTest.php  CoverageTest.php  EdgeCaseTest.php  ExtraCoverageTest.php  Final85CoverageTest.php  FinalCoverageTest.php  InstanceValidatorTest.php  LastPushTest.php  PushCoverageTest.php  SchemaValidatorTest.php  TargetedCoverageTest.php  TestAssetsTest.php
python/: .gitignore  README.md  pyproject.toml
python/demo/: error_codes_demo.py  schema_exporter_demo.py
python/src/json_structure/: __init__.py  error_codes.py  instance_validator.py  json_source_locator.py  schema_exporter.py  schema_validator.py
python/tests/: __init__.py  test_assets.py  test_instance_validator.py  test_json_source_locator.py  test_meta_schemas.py  test_primer_samples.py  test_schema_exporter.py  test_schema_validator.py  test_thread_safety.py
ruby/: .gitignore  Gemfile  README.md  Rakefile  json_structure.gemspec  jsonstructure.gemspec
ruby/lib/: json_structure.rb  jsonstructure.rb
ruby/lib/json_structure/: binary_installer.rb  ffi.rb  instance_validator.rb  schema_validator.rb  validation_result.rb
ruby/lib/jsonstructure/: instance_validator.rb  schema_validator.rb  version.rb
ruby/spec/: instance_validator_spec.rb  schema_validator_spec.rb  spec_helper.rb  test_assets_spec.rb  thread_safety_spec.rb  validation_result_spec.rb
rust/: .gitignore  CLI.md  Cargo.toml  LICENSE  README.md
rust/.github/workflows/: release.yml
rust/src/: error_codes.rs  instance_validator.rs  json_source_locator.rs  lib.rs  schema_validator.rs  types.rs
rust/tests/: cli_tests.rs  coverage_tests.rs  instance_validator_tests.rs  schema_validator_tests.rs  test_assets_tests.rs
swift/: .gitignore  Package.swift  README.md
swift/.build/: build.db  plugin-tools.yaml
swift/Sources/JSONStructure/: ErrorCodes.swift  InstanceValidator.swift  JsonSourceLocator.swift  SchemaValidator.swift  Types.swift
swift/Tests/JSONStructureTests/: AdditionalValidationTests.swift  ComprehensiveTests.swift  ConcurrencyTests.swift  EdgeCaseTests.swift  ErrorHandlingTests.swift  ExtraCoverageTests.swift  FinalCoverageTests.swift  InstanceValidatorExtendedTests.swift  (+5 more)
test-assets/: README.md  run-adversarial-tests.ps1
typescript/: README.md  package-lock.json  package.json
typescript/demo/: error-codes-demo.ts
typescript/src/: error-codes.ts  index.ts  instance-validator.ts  json-source-locator.ts  schema-validator.ts  serialization.ts  types.ts  validation-errors.ts
typescript/tests/: instance-validator.test.ts  json-source-locator.test.ts  meta-schemas.test.ts  schema-validator.test.ts  serialization.test.ts  test-assets.test.ts  validation-errors.test.ts  validator-reentrant.test.ts
vscode/: .eslintrc.json  .gitignore  .vscodeignore  README.md  package-lock.json  package.json  tsconfig.json
vscode/scripts/: update-version.js
vscode/src/: completionProvider.ts  definitionProvider.ts  diagnosticsManager.ts  documentSymbolProvider.ts  extension.ts  hoverProvider.ts  instanceValidator.ts  schemaCache.ts  schemaStatusCodeLensProvider.ts  schemaValidator.ts
vscode/test-fixtures/: deep-array-schema.struct.json  hover-edge-cases-schema.struct.json  instance-completion-schema.struct.json  instance-for-completions.json  instance-using-workspace-schema.json  invalid-instance-missing-required.json  invalid-instance-workspace-schema.json  invalid-instance-wrong-type.json  invalid-schema-bad-ref.struct.json  invalid-schema-bad-type.struct.json  invalid-schema-missing-type.struct.json  plain-json.json  required-field-schema.struct.json  required-schema.struct.json  schema-with-refs.struct.json  test-schema.struct.json  valid-instance.json  valid-schema.struct.json  workspace-schema.struct.json
(+240 files in other folders)
