[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "json-structure"
dynamic = ["version"]
description = "Validators for JSON Structure schemas and instances"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "JSON Structure Project", email = "info@json-structure.org" }
]
keywords = [
    "json",
    "schema",
    "validation",
    "json-structure",
    "type-system"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup",
    "Typing :: Typed"
]

[project.urls]
Homepage = "https://json-structure.org"
Documentation = "https://github.com/json-structure/sdk"
Repository = "https://github.com/json-structure/sdk"
Issues = "https://github.com/json-structure/sdk/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0"
]

[project.scripts]
json-structure-validate = "json_structure.instance_validator:main"
json-structure-check = "json_structure.schema_validator:main"

[tool.hatch.build.targets.sdist]
include = [
    "/src"
]

[tool.hatch.build.targets.wheel]
packages = ["src/json_structure"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v"

[tool.coverage.run]
source = ["src/json_structure"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError"
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
root = ".."
git_describe_command = ["git", "describe", "--dirty", "--tags", "--long", "--match", "v[0-9]*"]

[tool.hatch.build.hooks.vcs]
version-file = "src/json_structure/_version.py"
