[package]
name = "json-structure"
version = "0.1.0"
edition = "2021"
authors = ["JSON Structure Contributors"]
license = "MIT"
description = "JSON Structure schema validation library for Rust"
repository = "https://github.com/json-structure/sdk"
documentation = "https://docs.rs/json-structure"
readme = "README.md"
keywords = ["json", "schema", "validation", "types"]
categories = ["encoding", "parser-implementations"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
url = { version = "2.5", features = ["serde"] }
base64 = "0.21"
indexmap = { version = "2.1", features = ["serde"] }
clap = { version = "4.4", features = ["derive"], optional = true }

[dev-dependencies]
pretty_assertions = "1.4"
test-case = "3.3"
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.10"

[features]
default = []
extended = []  # Enable extended validation keywords
cli = ["clap"]

[lib]
name = "json_structure"
path = "src/lib.rs"

[[bin]]
name = "jstruct"
path = "src/bin/jstruct.rs"
required-features = ["cli"]
